Adding flexbox, pictures and working links

--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
 </div>
   <div id="topbar">
     <nav>
-      <a href="/"> Projects</a>
-      <a href="/"> About Me</a>
-      <a href="/"> Well</a>
-      <a href="/"> Put something here</a>
+      <a href="projects.html"> Projects</a>
+      <a href="projects.html"> About Me</a>
+      <a href="projects.html"> Well</a>
+      <a href="projects.html"> Put something here</a>
     </nav>
+  </div>
+  <div id="info">
+  <div> Welcome to this trashy website!
+  I really don't know what to put here...
+  </div>
+  </div>  
+  <div id="info2">This is some of my work</div>
+  
+  <div id="boxgrey">
+    <div><img src="DSC_0009.JPG" alt="" width="400" height="auto"></div>
+    <div><img src="DSC_0043.jpg" alt="" width="400" height="auto"></div>
+    <div><img src="DSC_0086.jpg" alt="" width="400" height="auto"></div>
+    <div><img src="Åvägen.jpg" alt="" width="400" height="270"></div>
+
   </div>
 </body>
 </html>
